--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>MY RESUME</p>
     <div class="narak">
-        <img src="c:\Users\LAB308_xx\Downloads\IU.jpg" width="320">
+        <img src="IU.jpg" width="320">
         <p class="name">MY name is Awasda Narongin</p>
         <a href="https://github.com/Awasda222">My Git</a>
     </div>
